# distdb

./: .gitignore  client.code-workspace  server.code-workspace  workspace.code-workspace
clientlib/: Cargo.toml
clientlib/src/: config.rs  config_test.rs  error.rs  error_test.rs  lib.rs  models.rs  models_test.rs  runtime.rs  runtime_test.rs
common/: Cargo.toml  readme.md
common/src/: lib.rs  p2p.rs  schema.rs
common/src/helpers/: aes.rs  aes_test.rs  base64.rs  base64_test.rs  format.rs  format_test.rs  hash.rs  io.rs  io_test.rs  macros.rs  mod.rs  tphashset.rs  tphashset_test.rs  utils.rs  utils_test.rs
common/src/schema/: field_index.rs  field_kind.rs  field_kind_test.rs  field_metadata.rs  mod.rs  peer_session.rs  peer_session_test.rs  session_log.rs  tls_mode.rs  validation.rs  validation_test.rs
connector/: Cargo.toml  readme.md
connector/src/: lib.rs  schema.rs  schema_test.rs
connector/src/core/: client.rs  client_test.rs  command.rs  command_test.rs  mod.rs  result.rs  result_test.rs  sql.rs
connector/src/p2p/: mod.rs  runtime.rs  transport.rs
console/: Cargo.toml  debug.sh
console/src/: bootstrap.rs  bootstrap_test.rs  commands.rs  commands_test.rs  import.rs  import_test.rs  lib.rs  main.rs  output.rs
peerlib/: Cargo.toml
peerlib/src/: error.rs  error_test.rs  interface.rs  interface_test.rs  lib.rs
peerlib/src/connector/: mod.rs  runtime.rs  runtime_test.rs  transport.rs  transport_test.rs
peerlib/src/p2p/: discovery.rs  discovery_test.rs  mod.rs  network.rs  network_test.rs  protocol.rs  pubsub.rs  runtime.rs  runtime_test.rs  transport.rs  types.rs
server/: 7b283c7ce9a22eb2.dbcat  Cargo.toml  d60f0d0c7d3b0afc.dbcat  debug.sh  readme.md
server/data/wal/: inventory.wal  orders.wal
server/src/: lib.rs  main.rs
server/src/core/: app.rs  app_test.rs  config.rs  config_test.rs  mod.rs  transaction_coordinator.rs
server/src/core/app/: helpers.rs  lifecycle.rs  mod.rs  mod_test.rs  state.rs  tests.rs
server/src/core/comms/: mod.rs  outbound_transport.rs  p2p.rs  p2p_wire.rs  p2p_wire_test.rs  surface.rs  surface_test.rs  tls_support.rs  tls_support_test.rs  wire_io.rs  wss.rs  wss_test.rs
server/src/core/control/: affinity.rs  affinity_test.rs  connector_handler.rs  connector_handler_test.rs  mod.rs  outbound_transport.rs  p2p_wire.rs  p2p_wire_test.rs  replication_sync.rs  schema_catalog.rs  session.rs  session_test.rs  tcp_transport.rs  tls_support.rs  tls_support_test.rs  wire_io.rs
server/src/core/mappings/: mod.rs  perf.rs  query.rs
server/src/engine/: XX1Ku256  mod.rs  wal_probe.rs  wal_probe_test.rs
server/src/helpers/: error.rs  mod.rs
serverlib/: Cargo.toml  readme.md
serverlib/src/: lib.rs
serverlib/src/core/: cluster.rs  config.rs  identity.rs  mod.rs  service.rs
serverlib/src/engine/: affinity.rs  affinity_storage.rs  database.rs  database_table.rs  ir_compiler.rs  ir_compiler_test.rs  mod.rs  replication.rs  replication_executor.rs  replication_executor_test.rs  schema.rs  security.rs  security_test.rs  sql.rs  table_schema.rs  transaction.rs  wal.rs  wal_test.rs
serverlib/src/engine/affinity/: checkpoint.rs  document.rs  mod.rs  mod_test.rs  processor.rs  state.rs  storage.rs  storage_test.rs  sync.rs
serverlib/src/engine/database/: catalog.rs  catalog_test.rs  core.rs  entity.rs  entity_aspect.rs  entity_kind.rs  entity_metadata.rs  entity_metadata_payload.rs  entity_object_ref.rs  entity_object_type.rs  entity_object_type_test.rs  error.rs  field_def.rs  field_def_test.rs  field_types.rs  id.rs  id_test.rs  index.rs  index_id.rs  index_lifecycle_payload.rs  index_test.rs  mod.rs  olap_view.rs  relationship.rs  replica_state.rs  row_payload.rs  row_payload_test.rs  runtime_index.rs  runtime_index_snapshot.rs  runtime_index_test.rs  schema_change_payload.rs  schema_change_state.rs  schema_change_state_test.rs  schema_change_tx.rs  schema_error.rs  schema_migration.rs  sql_definition_payload.rs  status.rs  status_test.rs  stored_procedure.rs  (+13 more)
serverlib/src/engine/execution/: XXXKieq7  access.rs  access_test.rs  introspection.rs  introspection_test.rs  join.rs  join_test.rs  mod.rs  mutation.rs  mutation_test.rs  row_windowing.rs  runtime.rs  runtime_test.rs  select.rs  select_test.rs
serverlib/src/engine/olap/: builder.rs  cache.rs  coordinate.rs  dimension.rs  hypercube.rs  measure.rs  mod.rs
serverlib/src/engine/sql/: classify.rs  classify_test.rs  delete_plan.rs  dialect.rs  (+27 more)
serverlib/src/helpers/: error.rs  hash.rs  mod.rs  time.rs
serverlib/src/p2p/: discovery.rs  discovery_test.rs  mod.rs  network.rs  network_test.rs  protocol.rs  pubsub.rs  runtime.rs  runtime_test.rs  transport.rs
serverlib/src/security/: mod.rs  tls.rs
(+1564 files in other folders)
