[package]
name = "clientlib"
version = "0.1.0"
edition = "2024"

[dependencies]
connector = { path = "../connector" }
peerlib = { path = "../peerlib" }
common = { path = "../common" }
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
