[package]
name = "connector"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.229", features = ["derive"] }
bincode = "1.3.2"
log = "0.4.33"
rustls = { version = "0.23.42", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2"