[package]
name = "console"
version = "0.1.0"
edition = "2024"

[dependencies]
connector = { path = "../connector" }
peerlib = { path = "../peerlib" }
env_logger = "0.11"
log = "0.4"
common = { path = "../common" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustyline = "14"
