[package]
name = "peerlib"
version = "0.1.0"
edition = "2024"

[features]
default = ["connector-stack"]
connector-stack = []
server-p2p = []

[dependencies]
connector = { path = "../connector" }
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
log = "0.4"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2"
