[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]

[dependencies]
serverlib = { path = "../serverlib" }
connector = { path = "../connector" }
common = { path = "../common" }
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"