[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]

[dependencies]
serverlib = { path = "../serverlib" }
connector = { path = "../connector" }
common = { path = "../common" }
log = "0.4"
env_logger = "0.11"
bincode = "1.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2"