[package]
name = "serverlib"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.229", features = ["derive"] }
bincode = "1.3"
log = "0.4.33"
sqlparser = "0.51"
rcgen = { version = "0.13", features = ["x509-parser"] }
chrono = "*"
regex = "1.13.1"
ahash = "0.8"
flate2 = "1"
openssl = "*"